<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="title_find_out_your_bmi">Find Out Your BMI</string>
    <string name="weight_label">Weight</string>
    <string name="lbs_label">lbs</string>
    <string name="height_label">Height</string>
    <string name="ft_label">ft</string>
    <string name="in_label">in</string>
    <string name="calculate_button_label">Calculate</string>
    <string name="underweight_bmi">Underweight BMI</string>
    <string name="normal_bmi">Normal BMI</string>
    <string name="overweight_bmi">Overweight BMI</string>
    <string name="obese_bmi">Obese BMI</string>
    <string name="numeric_value_for_weight">Please enter a numeric value for weight.</string>
    <string name="reasonable_value_for_weight">Please enter a reasonable value for weight.</string>
    <string name="valid_number_value_height">Please enter a numeric value for height in feet.</string>
    <string name="reasonable_value_height_feet">Please enter a reasonable value for height in feet.</string>
    <string name="valid_number_inches">Please enter a numeric value for inches.</string>
    <string name="reasonable_value_inches">Please enter a reasonable value for height in inches.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
