<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingLeft="@dimen/main_padding_left"
    android:paddingRight="@dimen/main_padding_right"
    android:gravity="center">

    <TextView
        android:id="@+id/my_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_find_out_your_bmi"
        android:textAllCaps="true"
        android:textSize="@dimen/title_text_size"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/margin_bottom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_label"
        android:layout_marginTop="@dimen/weight_margin_top"
        android:textSize="@dimen/weight_label_text_size"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top">

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbs_label"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_label"
        android:layout_marginTop="@dimen/margin_top_height_label"
        android:textSize="@dimen/height_label_text_size"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top">

        <EditText
            android:id="@+id/feet_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ft_label"/>

        <EditText
            android:id="@+id/inches_input"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="8"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_label"/>
    </LinearLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/calculate_button_label"/>

</LinearLayout>